# cosi2

./: .gitignore  .travis.yml  AUTHORS  Makefile.am  Makefile.in  README.md  README.org  aclocal.m4  build.sh  configure  configure.ac  makedist.sh
cosi/: .gitignore  Doxyfile  History  Makefile.am  Makefile.in  README  Terms.txt  aclocal.m4  alleleDropout_cosi.c  arrival.cc  arrival.h  arrproc.h  arrproc2.h  basemodel.cc  basemodel.h  calc_Fst_cosi.c  calc_Fst_cosi.cc  calc_pop_stats_cosi.c  calc_pop_stats_cosi.cc  callgrind.h  cmpdist.py  coal_data_cosi.c  coal_data_cosi.h  coal_data_cosi_ad.c  coalesce.cc  coalesce.h  coalescent.cc  coalescent.h  coalrate.h  condsnp.cc  condsnp.h  configure  configure.ac  cosicfg.h  cosiihh.cc  cosimain.cc  cosirand.cc  cosirand.h  cositests.am  cositop.cc  (+118 more)
cosi/SRDelegates/benchmark/: make_test.cmd
cosi/SRDelegates/benchmark/config/: bcc32.conf  dmc.conf
cosi/SRDelegates/benchmark/src/: benchmark.cpp  receivers.cpp
cosi/SRDelegates/demo/: delegate_demo.cpp
cosi/SRDelegates/doc/: delegate.html  style.css
cosi/SRDelegates/test/: make_test.cmd  makefile
cosi/SRDelegates/test/config/: gcc.conf
cosi/SRDelegates/test/src/: BoostFunctionEventTest.cpp  DelegateEventTest.cpp  IncludeTest.cpp  InterfaceEventTest.cpp  MakeTest.cpp
cosi/boost/boost/: lexical_cast.hpp
cosi/boost/boost/system/: error_code.hpp
cosi/boost/libs/filesystem/src/: operations.cpp
cosi/boost/libs/timer/src/: cpu_timer.cpp
cosi/dev/: README.org  morestats.h
cosi/general/: README.org  arrproc.h  arrproc2.h  mempool.cc  mempool.h  transformed_map_values.hpp  typedval.h  utildefs.h  utils.cc  utils.h  vecmap.h
cosi/general/datastruct/: README.org  order_statistics.hpp  ost_no_delta.hpp  random_access_skip_list.h
cosi/general/dbg/: README.org
cosi/general/math/: README.org  cosirand.cc  cosirand.h  gauss_legendre.c  generalmath.h
cosi/m4/: root.m4
cosi/ndproj/: Menu.txt  Topics.txt
cosi/tests/: .gitignore  ost_test.cpp  runtest.py  sample_stats_extra.cc  test_arrproc.cc  test_random_access.cpp  tests.am
cosi/tests/bugs/bug0001/: test.cosiParams
cosi/tests/model001/: test.cosiParams
cosi/tests/model001/t/: exactcmd.txt  exactsum.sha512  run.sh  stochsumm.tsv.bz2  testchecksums.sha512
cosi/tests/model001/t_u_0001/: run.sh  stochsumm.tsv.bz2  stochtime.txt
cosi/tests/model001/t_u_001/: exactsum.sha512  run.sh  stochtime.txt
cosi/tests/model002/: test.cosiParams
cosi/tests/model002/t/: exactcmd.txt  run.sh  stochtime.txt
cosi/tests/model002/t_u_0001/: exactsum.sha512  run.sh
cosi/tests/model002/t_u_001/: exactsum.sha512  run.sh  stochcmd.txt  stochtime.txt
cosi/tests/model003/t/: exactsum.sha512  run.sh  stochcmd.txt  testchecksums.sha512
cosi/tests/model003/t_u_0001/: exactcmd.txt  stochcmd.txt
cosi/tests/model004/: test.cosiParams
cosi/tests/model004/t/: exactcmd.txt  exactsum.sha512  run.sh
cosi/tests/model004/t_u_0001/: exactcmd.txt  run.sh  stochcmd.txt
cosi/tests/model004/t_u_001/: stochcmd.txt
cosi/tests/model005/t/: run.sh  stochsumm.tsv.bz2
cosi/tests/model005/t_u_0001/: exactcmd.txt
cosi/tests/model005/t_u_001/: stochtime.txt
cosi/tests/model006/t/: run.sh  stochtime.txt
cosi/tests/model006/t_u_0001/: stochsumm.tsv.bz2
cosi/tests/model006/t_u_001/: exactcmd.txt  stochtime.txt
cosi/tests/model007/t/: exactsum.sha512  run.sh  stochsumm.tsv.bz2
cosi/tests/model007/t_u_0001/: run.sh  stochcmd.txt  stochsumm.tsv.bz2  stochtime.txt
cosi/tests/model007/t_u_001/: exactcmd.txt  run.sh  stochcmd.txt  stochtime.txt
cosi/tests/model008/t/: exactcmd.txt  exactsum.sha512  run.sh
cosi/tests/model008/t_u_0001/: run.sh  stochcmd.txt  stochsumm.tsv.bz2  stochtime.txt
cosi/tests/model008/t_u_001/: run.sh  stochsumm.tsv.bz2  stochtime.txt
cosi/tests/model009/t/: run.sh
cosi/tests/model009/t_u_0001/: exactcmd.txt  exactsum.sha512  run.sh  stochcmd.txt  stochsumm.tsv.bz2
cosi/tests/model009/t_u_001/: exactcmd.txt  run.sh
cosi/tests/model010/t/: run.sh  stochcmd.txt
cosi/tests/model010/t_u_0001/: run.sh  stochcmd.txt  stochsumm.tsv.bz2  stochtime.txt
cosi/tests/model010/t_u_001/: run.sh  stochtime.txt
cosi/tests/model011/: test.cosiParams
cosi/tests/model011/t/: exactsum.sha512  run.sh  stochcmd.txt
cosi/tests/model011/t_u_0001/: run.sh  testchecksums.sha512
cosi/tests/model011/t_u_001/: run.sh  testchecksums.sha512
cosi/tests/model012/: test.cosiParams
cosi/tests/model012/t/: run.sh  stochcmd.txt  stochtime.txt
cosi/tests/model012/t_u_0001/: exactcmd.txt  run.sh  stochsumm.tsv.bz2
cosi/tests/model012/t_u_001/: exactsum.sha512  run.sh  stochsumm.tsv.bz2
cosi/tests/model013/: test.cosiParams
cosi/tests/model013/t/: exactsum.sha512  run.sh  testchecksums.sha512
cosi/tests/model013/t_u_0001/: exactcmd.txt  exactsum.sha512  stochcmd.txt  stochtime.txt
cosi/tests/model014/: test.genmap
cosi/tests/model014/t/: run.sh  update.log1  update.out1
cosi/tests/model014/t_u_0001/: update.out1
cosi/tests/model015/: test.cosiParams
cosi/tests/model015/t/: run.sh
cosi/tests/model016/: test.cosiParams
cosi/tests/model016/t/: run.sh  update.log1
cosi/tests/model016/t_u_0001/: update.log1
cosi/tests/model016/t_u_001/: run.sh  testchecksums.sha512
cosi/tests/model017/t/: run.sh  testchecksums.sha512
cosi/tests/model017/t_u_0001/: run.sh  testchecksums.sha512  update.out1
cosi/tests/model017/t_u_001/: run.sh  update.log1
cosi/tests/model018/t/: run.sh
cosi_rand/: AUTHORS  COPYING  History  Makefile.am  Makefile.in  README_mtwist  configure  configure.ac  expdev.c  expdev.h  gamma.c  gamma.h  gammln.c  gammln.h  mtwist.c  mtwist.h  multinom.c  multinom.h  poisson.c  poisson.h  ranbinom.c  ranbinom.h  random.bak  random.h  rng.c  rng.h
devel/: README.recosim  (+3 more)
devel/miscutil/: configure  configure.ac  defs.h
miscutil/: Makefile.am  Makefile.in  typedval.h  utils.cc  utils.h
recosim/: .gitignore  History  Makefile.am  Makefile.in  configure  configure.ac  gamma.hpp  get_recomap.c  get_recomap.cc  make_recosim  recomap_hapmap2.c  recomap_hapmap2.cc  recosim.c  recosim.cc
(+772 files in other folders)
